# record-thing

./: .clinerules  .cursorignore  .cursorrules  .env.example  .flake8  .gitignore  .taskmasterconfig  CLAUDE.md  LICENSE  README.md  check-db.py  package-lock.json  pyproject.toml  record-thing.code-workspace  requirements.txt  wordnet-test.py
.cursor/: mcp.json
.cursor/rules/: cursor-memory-bank.mdc  if-debug.mdc  logging.mdc
.github/workflows/: RUNNER_SETUP.md  e2e-tests.yml  ios-tests.yml  self-hosted-tests.yml  test.yml
.roo/rules/: cursor-memory-bank.md  record-thing.md  service-docs.md  swift-codebase.md  target-platforms.md
apps/: README.md
apps/RecordThing/: .gitignore  .swiftlint.yml  README.md
apps/RecordThing/LICENSE/: LICENSE.txt
apps/RecordThing/RecordThing.xcodeproj/: project.pbxproj
apps/RecordThing/RecordThingTests/: DocumentTypesTests.swift  SidebarToggleTests.swift
apps/RecordThing/ShareExtension/: Info.plist  MACOS_STATUS.md  MainInterface.storyboard.ios  README.md  ShareExtension-macOS.entitlements  ShareExtension.entitlements  ShareExtensionDatasource.swift  ShareExtensionView.swift  ShareViewController+macOS.swift  ShareViewController.swift  SharedContentModel.swift  TESTING.md  YouTubeService.swift
apps/RecordThing/ShareExtensionTests/: ShareExtensionPerformanceTests.swift  TESTING_README.md  TestConfiguration.swift  YouTubeServiceTests.swift
apps/RecordThing/Shared/: AppDatasource.swift  RecordThingApp.swift
apps/RecordThing/Widgets/: FeaturedSmoothieWidget.swift  (+2 more)
apps/mlx-test/: dino_attention.ipynb  requirements.txt  test.ipynb
assets/: .buckia  iOS App Icon.afdesign  mac App Icon.afdesign
dataset/: API.md  README.md  VECTORS.md  __init__.py  commons.py  embedder.py  ingestion.py  product.py  refinery rejects.ipynb  refinery.ipynb  vector.py
dataset/DINO/: Train_a_linear_classifier_on_top_of_DINOv2_for_semantic_segmentation-2.ipynb
dataset/db/: __init__.py  account.py  accounts.sql  assets.py  assets.sql  claude.md  claude.sql  db.py  products.py  products.sql  rql.py  sql.py  uid.py
dataset/evidentnet/: README.md
dataset/models/: __init__.py  account.py  assets.py  dinov2_hf_model.py  dinov2_model.py  google_taxonomy_parser.py  indoor_scene.py  uid.py
dataset/rql/: __init__.py  account.py  assets.py  products.py
dataset/scraper/: downloader.py  items.py  middlewares.py  pipelines.py
dataset/sql/: __init__.py  account.py  products.py  rql.py  sql.py
dataset/taxonomy/: category.py  google_product.sql
docs/: ACTIONS_VIEW.md  APP_STORE.md  BACKOFFICE_PRD.md  BLACKBIRD.md  BRANDING.md  CLI.md  DATABASE.md  DEMO_CONTENT_MANAGEMENT.md  DOCUMENT_TYPES.md  FREEMIUM_TIERS_PRD.md  GITHUB_RUNNER_SETUP.md  ICLOUD_SYNC.md  MACOS_DATABASE_CONNECTIVITY.md  POSTHOG_INTEGRATION_STRATEGY.md  PRIVACY_POLICY.md  QA.md  README.md  Read_bar_code_fromVideo.ipynb  SHARING_IMPLEMENTATION.md  SQL_SCHEMA_MIGRATION_STRATEGY.md  TERMS_CONDITIONS.md  XCODE.md  XCODE_MCP.md  __init__.py  apple_enrollment.md  components.md  compose.yml  drone-research.md  gestures.md  install kernel.ipynb  instructions.md  navigation.md  record-thing.ipynb  refinery rejects.ipynb  setup rqlite.ipynb  setup sqlite.ipynb  setup.ipynb  upc-lookup.ipynb  viewmodels.md
docs/mobile/: recordlib_lifecycle.md  swift.md
libs/record_thing/: .buckia  .gitignore  IMAGEGEN.md  PLAN.md  README.md  README_TRANSLATIONS.md  __init__.py  __main__.py  cli.py  commons.py  db_setup.py  demo_translation_workflow.py  gen_evidence.py  gen_image.py  record-thing-test.sqlite  record-thing.sqlite  sync-demo-config.json  test_key_prefixes.py  translation_extractor.py  translation_manager.py  translation_validator.py  update_translations.py
memory-bank/: .cursorrules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check-test-status.sh  manage-runner.sh  reset_permissions.sh  run_tests.sh  setup-github-runner.sh  test_schema_validation.py  update_db_schema.sh
tests/: README.md  conftest.py  generate_large_dataset.py  generate_test_docs.py  test_data_generation.py  test_database_creation.py  test_full_integration.py  test_ios_compatibility.py  test_performance.py  test_schema_migration.py
trials/: 01_pytorch_workflow.ipynb  02_pytorch_classification_exercises.ipynb  02_pytorch_classification_video.ipynb  03_pytorch_vision.ipynb  Image_Browser.ipynb  PyTorch-Quickstart.ipynb  README.md  ViT_Paper_Replication.ipynb  model.pth  nn_tutorial.ipynb  study-ml.code-workspace
trials/DINOv2/: README.md  semantic_segmentation.ipynb
trials/models/: 01_pytorch_linear.pth  02_pytorch_linear.pth  fashionmnist_model_v2.pth
(+350 files in other folders)
