[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "record-thing"
version = "0.1.0"
description = "Tools and Serverside for Record Thing App support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.38.4",
    "buckia>=0.4.0",
    "bunnycdnpython>=0.0.8",
    "cyksuid>=2.1.0",
    "duckdb>=1.2.2",
    "google-cloud-aiplatform>=1.90.0",
    "google-genai>=1.12.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "sparqlwrapper>=2.0.0",
    "together>=1.5.5",
    "vertexai>=1.43.0",
]

# Add test dependencies
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
record-thing = "record_thing.cli:main"
record-thing-test = "pytest:main"
record-thing-test-integration = "pytest:main"

[tool.setuptools]
package-dir = {"" = "libs"}
packages = ["record_thing"]

# Configure pytest
[tool.pytest.ini_options]
testpaths = ["libs/record_thing/tests"]
python_files = "test_*.py"
pythonpath = [".", "libs"]
addopts = "-v --cov=record_thing"

# Configure test coverage
[tool.coverage.run]
source = ["libs/record_thing"]
omit = ["libs/record_thing/tests/*"]

[tool.mypy]
python_version = "3.10"
